<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Abit</string>
    <string name="about_app">A Bitmessage client for Android</string>
    <string name="title_message_detail">Message</string>
    <string name="title_subscription_detail">Subscription</string>
    <string name="title_chan_detail">Chan</string>
    <string name="title_identity_detail">Identity</string>
    <string name="title_contact_detail">Contact</string>
    <string name="bitmessage_full_node">Bitmessage Node</string>
    <string name="settings">Settings</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="wifi_only_summary">Don\'t connect to the mobile network</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="manage_identity">Manage Identity</string>
    <string name="add_identity">Add Identity</string>
    <string name="add_identity_summary">Create new identity</string>
    <string name="create_identity_description">Create a new, random identity</string>
    <string name="import_identity_description">Import an existing identity from PyBitmessage or from an export</string>
    <string name="add_deterministic_address">Deterministic identity</string>
    <string name="add_deterministic_address_description">Create or recreate a deterministic identity</string>
    <string name="add_chan">Add Chan</string>
    <string name="add_chan_description">Create or join a Chan</string>
    <string name="title_activity_open_bitmessage_link">Import Contact</string>

    <string name="connection_info_1">Stream #%1$d: one connection</string>
    <string name="connection_info_n" tools:ignore="PluralsCandidate">Stream #%1$d: %2$d connections</string>
    <string name="label">Label</string>
    <string name="subscribe">Subscribe</string>
    <string name="do_import">Import</string>
    <string name="cancel">Cancel</string>
    <string name="broadcast">Broadcast</string>
    <string name="n_new_messages" tools:ignore="PluralsCandidate">%d new messages</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="mark_unread">Mark unread</string>
    <string name="archive">Archive</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="stream_number">Stream #%d</string>
    <string name="trusted_node">Trusted node</string>
    <string name="trusted_node_summary">Use this node for synchronization</string>
    <string name="sync_timeout">Synchronization Timeout</string>
    <string name="sync_timeout_summary">Timeout in seconds</string>
    <string name="write_message">Write message</string>
    <string name="full_node">Full node</string>
    <string name="send">Send</string>
    <string name="connection_info_disconnected">Disconnected</string>
    <string name="connection_info_pending">Connecting…</string>
    <string name="proof_of_work_title">Proof of Work</string>
    <string name="proof_of_work_text_0">Doing work to send message</string>
    <string name="proof_of_work_text_n" tools:ignore="PluralsCandidate">Doing work to send message (%1$d queued)</string>
    <string name="error_invalid_sync_port">Invalid port in synchronization settings: %s</string>
    <string name="compose_body_hint">Write message</string>
    <string name="contacts_and_subscriptions">Contacts</string>
    <string name="subscribed">Subscribed</string>
    <string name="server_pow">Server POW</string>
    <string name="server_pow_summary">Trusted node does proof of work</string>
    <string name="full_node_warning">Running a full Bitmessage node uses a lot of traffic, which could be expensive on a mobile network. Are you sure you want to start a full node?</string>
    <string name="about">About Abit</string>
    <string name="about_summary">Open source dependencies.</string>
    <string name="title_activity_status">Debugging</string>
    <string name="status">Debugging</string>
    <string name="status_summary">Technical information</string>
    <string name="alias_default_identity">Me</string>
    <string name="pubkey_available">Public key available</string>
    <string name="pubkey_not_available">Public key not yet available</string>
    <string name="alt_qr_code">QR code</string>
    <string name="add_identity_warning">Having more identities will require more resources. If you are sure you want to add an identity, please select what exactly you want to do:</string>
    <string name="share">Share</string>
    <string name="delete_identity_warning">Are you sure you want to delete this identity? You won\'t be able to receive any messages sent to this address and can\'t undo this operation.</string>
    <string name="delete_contact_warning">Are you sure you want to delete this contact?</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="create_contact">Create contact</string>
    <string name="full_node_description">You can\'t receive or send messages unless you start a full node. But be aware that this uses a lot of resources and internet traffic.

As an alternative you could configure a trusted node in the settings, but as of now you\'ll need to deploy your own.</string>
    <string name="address">Bitmessage Address</string>
    <string name="error_illegal_address">There might be a typo</string>
    <string name="export">Export</string>
    <string name="confirm_export">Do you really want to export your identity? The export will contain the unencrypted private keys.</string>
    <string name="compose_message">Compose</string>
    <string name="passphrase">Passphrase</string>
    <string name="help_out">Support Development</string>
    <string name="help_out_summary">Want to help out? Have a look here</string>
    <string name="help_out_link">https://dissem.github.io/Abit/helping-out</string>
    <string name="toast_long_running_operation">This may take a few minutes</string>
    <string name="toast_identity_created">Identity created</string>
    <string name="toast_identities_created">Identities created</string>
    <string name="toast_chan_created">Chan created</string>
    <string name="deterministic_address_warning">Be sure to remember those settings correctly when recreating a deterministic address.</string>
    <string name="number_of_identities">Number of identities to create</string>
    <string name="shorter">Search for shorter addresses</string>
    <string name="wif_string">WIF / contents of ‘keys.dat’</string>
    <string name="next">Continue</string>
    <string name="title_import_identity">Import Identity</string>
    <string name="open_file">Open File</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="select_file_title">Select a File</string>
    <string name="select_identities_to_import">Please select the identities you want to import:</string>
    <string name="import_input_description">You can just paste the contents of an export or a ‘keys.dat’ file</string>
    <string name="full_node_stop">shutdown node</string>
    <string name="full_node_restart">restart node</string>
    <string name="use_mobile_network">Use mobile network</string>
    <string name="personal_message">Message</string>
    <string name="no_identity_warning">Please try again once an identity is available.</string>
    <string name="status_public_key">public key requested</string>
    <string name="status_sent_acknowledged">acknowledged</string>
    <string name="status_draft">draft</string>
    <string name="status_sent">sent</string>
    <string name="status_received">received</string>
    <string name="error_unsupported_encoding">Unsupported encoding ‘%s’, using ‘simple’ instead.</string>
    <string name="select_encoding_warning">‘Extended’ is a new message format that\'s not widely supported yet but has some interesting features. To stay on the save side, select ‘simple’.</string>
    <string name="select_encoding_title">Select Message Encoding</string>
    <string name="cleanup">Cleanup</string>
    <string name="cleanup_summary">Remove outdated inventory entries</string>
    <string name="cleanup_notification_start">Cleanup started</string>
    <string name="cleanup_notification_end">Cleanup finished</string>
    <string name="wait_for_wifi">Wait for Wi-Fi</string>
    <string name="error_msg_recipient_missing">Please set a recipient</string>
    <string name="export_data">Export</string>
    <string name="export_data_summary">Export all messages and contacts (but not identities)</string>
    <string name="import_data">Import</string>
    <string name="import_data_summary">Import messages and contacts (but not identities)</string>
    <string name="request_acknowledgements">Request acknowledgements</string>
    <string name="request_acknowledgements_summary">Acknowledges allow making sure a message was received, but require additional time to send</string>
    <string name="got_it">Got it</string>
    <string name="select_encoding">Select encoding</string>
    <string name="from">From</string>
    <string name="invalid_wif_file">The file could not be processed</string>
    <string name="inbox">Inbox</string>
    <string name="outbox">Outbox</string>
    <string name="draft">Drafts</string>
    <string name="sent">Sent</string>
    <string name="unread">Unread</string>
    <string name="trash">Trash</string>
    <string name="broadcasts">Broadcasts</string>
    <string name="encoding_simple">simple</string>
    <string name="encoding_extended">extended</string>
    <string name="context_menu">actions</string>
    <string name="emulate_conversations">Guess conversations</string>
    <string name="emulate_conversations_summary">Use subject to determine which messages belong together. The order will likely be wrong.</string>
    <string name="emulate_conversations_initialize">Group existing messages by subject</string>
    <string name="emulate_conversations_batch">Grouping existing messages by subject</string>
    <string name="preference_group_user_experience">Behaviour</string>
    <string name="preference_group_user_experience_summary">Change how messages are displayed</string>
    <string name="preference_group_network_and_performance">Network &amp; Performance</string>
    <string name="preference_group_network_and_performance_summary">Tweak network usage and protocol details</string>
    <string name="preference_group_advanced">Advanced</string>
    <string name="preference_group_advanced_summary"></string>
    <string name="preference_group_experimental">Experimental</string>
    <string name="preference_group_experimental_summary">Only change if you know what you\'re doing</string>
    <string name="require_charging">Require charging</string>
    <string name="require_charging_summary">Only connect when device is plugged in</string>
    <string name="unknown">Unknown</string>
    <string name="ok">OK</string>
    <string name="online">Online</string>
    <string name="warning_low_memory">Low memory!</string>
    <string name="bitmessage_service_description">Keeps the connection to the bitmessage network.</string>
    <string name="preference_port">Port</string>
    <string name="preference_port_summary">Listen on this port for incoming connections. You might need to shortly go offline before the new port is used.</string>
    <string name="preference_separate_identities_summary">Show messages for selected identity only</string>
    <string name="preference_separate_identities">Filter messages by identity</string>
    <string name="delete_all_messages_in_list">Delete all</string>
    <string name="delete_all_messages_in_list_ask">Delete all messages in list?</string>
</resources>
