<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="preference_ux"
        android:persistent="false"
        android:summary="@string/preference_group_user_experience_summary"
        android:title="@string/preference_group_user_experience">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="separate_identities"
            android:summary="@string/preference_separate_identities_summary"
            android:title="@string/preference_separate_identities" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="emulate_conversations"
            android:summary="@string/emulate_conversations_summary"
            android:title="@string/emulate_conversations" />
        <Preference
            android:defaultValue="true"
            android:key="emulate_conversations_initialize"
            android:summary="@string/emulate_conversations_summary"
            android:title="@string/emulate_conversations_initialize" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="preference_network_and_performance"
        android:persistent="false"
        android:summary="@string/preference_group_network_and_performance_summary"
        android:title="@string/preference_group_network_and_performance">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="wifi_only"
            android:summary="@string/wifi_only_summary"
            android:title="@string/wifi_only" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="require_charging"
            android:summary="@string/require_charging_summary"
            android:title="@string/require_charging" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="request_acknowledgements"
            android:summary="@string/request_acknowledgements_summary"
            android:title="@string/request_acknowledgements" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="preference_advanced"
        android:persistent="false"
        android:summary="@string/preference_group_advanced_summary"
        android:title="@string/preference_group_advanced">

        <Preference
            android:key="cleanup"
            android:summary="@string/cleanup_summary"
            android:title="@string/cleanup" />
        <Preference
            android:key="export"
            android:summary="@string/export_data_summary"
            android:title="@string/export_data" />
        <Preference
            android:key="import"
            android:summary="@string/import_data_summary"
            android:title="@string/import_data" />

        <Preference
            android:key="status"
            android:summary="@string/status_summary"
            android:title="@string/status" />

        <EditTextPreference
            android:defaultValue="8444"
            android:key="listening_port"
            android:summary="@string/preference_port_summary"
            android:title="@string/preference_port"
            android:numeric="integer"/>

    </PreferenceScreen>

    <Preference
        android:key="about"
        android:summary="@string/about_summary"
        android:title="@string/about" />
    <Preference
        android:key="help_out"
        android:summary="@string/help_out_summary"
        android:title="@string/help_out">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/help_out_link" />
    </Preference>
</PreferenceScreen>
