<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textNoSuggestions" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address_wrapper"
        android:layout_below="@+id/address_wrapper"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:inputType="textPersonName" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address_wrapper"
        android:layout_below="@+id/label_wrapper"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/subscribe" />

    <Button
        android:id="@+id/do_import"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/subscribe"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/do_import" />

    <Button
        android:id="@+id/cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/do_import"
        android:layout_toStartOf="@+id/do_import"
        android:text="@string/cancel" />

</RelativeLayout>
