<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Christian Basler
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="18dp"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="18dp">

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_encoding_warning"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:layout_alignStart="@+id/description"
        android:layout_alignEnd="@+id/description"
        android:layout_below="@+id/description">

        <RadioButton
            android:id="@+id/simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="SIMPLE"/>

        <RadioButton
            android:id="@+id/extended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="EXTENDED"/>

    </RadioGroup>


    <Button
        android:id="@+id/ok"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_below="@+id/radioGroup"/>

    <Button
        android:id="@+id/dismiss"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:layout_toStartOf="@+id/ok"
        android:layout_below="@+id/radioGroup"/>

</RelativeLayout>
