<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Christian Basler
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:src="@color/colorAccent"
        tools:ignore="ContentDescription"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/avatar"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/avatar"
        android:inputType="textPersonName"
        android:text=""
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:lines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        tools:text="BM-XyYxXyYxXyYxXyYxXyYx"/>

    <TextView
        android:id="@+id/stream_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:ellipsize="end"
        android:lines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:text="Stream #"/>

    <Switch
        android:id="@+id/active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stream_number"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/subscribed"/>

    <ImageView
        android:id="@+id/pubkey_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/active"
        android:paddingEnd="4dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:src="@drawable/public_key"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/pubkey_available_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pubkey_available"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/pubkey_available"
        android:paddingEnd="16dp"
        android:paddingStart="0dp"
        android:text="@string/pubkey_available"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pubkey_available"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/alt_qr_code"
        android:elevation="2dp"
        tools:ignore="UnusedAttribute"
        tools:src="@drawable/public_key"/>
</RelativeLayout>
